--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+server:
+  port: 8080
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 spring:
   freemarker:
     template-loader-path: classpath:/templates
