--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'io.springfox:springfox-swagger-ui:3.0.0'
     // https://mvnrepository.com/artifact/dev.akkinoc.util/yaml-resource-bundle
     implementation 'dev.akkinoc.util:yaml-resource-bundle:2.8.0'
+    implementation 'org.springframework.data:spring-data-redis:3.0.3'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
